# Helix-Swarm

./: CNAME  GLOBAL_MEMORY.md  README.md  README.zh-CN.md  cli.py  config.json  error_solutions.json  helix_config.example.json  history.json  index.html  install.ps1  install.sh  learning_progress.json  my_mcp_server.py  pytest.ini  requirements.txt  skills.json  students.db  web_ui.py
agents/browser/: agent.py
agents/cleaner/: agent.py
agents/coder/: agent.py
agents/debugger/: agent.py
agents/doc/: agent.py
agents/mcp/: agent.py
agents/plugin/: agent.py
agents/reviewer/: agent.py
agents/searcher/: agent.py
agents/selfimprove/: agent.py
agents/skill/: agent.py
agents/statemanager/: agent.py
agents/terminal/: agent.py
agents/tester/: agent.py
agents/viewer/: agent.py
agents/visualizer/: agent.py
agents/writer/: agent.py
config/: default_config.yaml
core/: agent.py  agent_registry.py  audit_logger.py  compressor.py  config.py  event_bus.py  executor.py  hook_manager.py  learning_scheduler.py  mcp_client.py  memory.py  memory_enhanced.py  model_router.py  permission_manager.py  project_memory.py  prompt_builder.py  registry.py  router.py  skill_library.py  slash_commands.py  smart_compressor.py  streaming.py  swarm.py  system_handler.py  task.py  task_sandbox.py  tool_use_loop.py  toolkit.py  toolsets.py  undo_manager.py  user_model.py
docs/: AGENTS.md  MAC_SETUP.md
docs/plans/: 2025-01-XX-asl-virtual-human-architecture-SUMMARY.md  2025-01-XX-asl-virtual-human-architecture.md
gateway/: qq_gateway.py  wechat_gateway.py
instance/: student_management.db
learning_reports/: learning_report_20260411_143837.json  learning_report_20260411_194808.json  learning_report_20260412_101657.json  learning_report_20260413_231956.json  learning_report_20260414_175940.json
llm/: client.py
mem_palace_db/: chroma.sqlite3
research_agent/: LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_structure.py
research_agent/agents/: __init__.py  data_analysis_agent.py  experiment_agent.py  literature_agent.py  writing_agent.py
research_agent/config/: settings.py
research_agent/core/: workflow_engine.py
research_agent/data/: test_list.json
research_agent/research_agent/: __init__.py
research_agent/research_agent/config/: __init__.py
research_agent/research_agent/core/: __init__.py  agent_base.py  memory.py  state_manager.py  task_manager.py  workflow_engine.py
research_agent/research_agent/services/: llm_service.py  search_service.py
research_agent/services/: __init__.py  llm_service.py  storage_service.py
research_agent/tests/: __init__.py  conftest.py  test_agent.py  test_memory.py  test_services.py  test_tasks.py  test_workflows.py
skills/: autonomous-ai-researcher.md  drag_reader.py  file_ops.py  safe_terminal.py  search_tools.py
skills/software_dev/plan/: SKILL.md
skills/software_dev/requesting-code-review/: SKILL.md
skills/software_dev/subagent-driven-development/: SKILL.md
skills/software_dev/systematic-debugging/: SKILL.md
skills/software_dev/test-driven-development/: SKILL.md
skills/software_dev/writing-plans/: SKILL.md
skills/terminal/: INSTRUCTIONS.md  __init__.py
src/: models.py  password_utils.py
src/code_generation/: __init__.py  code_generator.py
src/experiment_execution/: __init__.py  experiment_runner.py  results_collector.py  script_executor.py
src/idea_generation/: code_generator.py  experiment_designer.py  idea_generator.py  literature_review.py  literature_scraper.py
src/orchestrator/: __init__.py  research_orchestrator.py
src/paper_writing/: __init__.py  paper_formatter.py  paper_writer.py
src/utils/: config_manager.py  logger.py
templates/: index.html  paper_latex_template.tex
tests/: test_code_generator.py  test_config_manager.py  test_contracts.py  test_experiment_designer.py  test_experiment_runner.py  test_idea_generator.py  test_latex_template.py  test_literature_scraper.py  test_logger.py  test_paper_formatter.py  test_paper_writer.py  test_password_utils.py  test_research_orchestrator.py  test_results_collector.py  test_script_executor.py  test_structure.py
tools/: __init__.py  code_search.py  file_ops.py  git_ops.py  shell_ops.py
